2008-02-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/protocol/http.scm
	  When httpd dit not use non-vhost configuration and run CGI/FCGI bridge,
	  Kahua built some wrong URI. Fixed it.  This patch from Shiro Kawai.

2008-02-13  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: add explain for @@:,@@/,
	  which is translated from server.kahua .
	
2008-02-12  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: src/kahua/server.scm
	  Partially update node(html parts).
	  patch for %a/cont-handler,%form/cont-handler.
	  and add local-parts like as local-cont procedure.
	* Add: test/multi-paging.kahua
	       test/multi-paging.scm
	  add test code for a/cont,form/cont's new attribute('parts-cont').
	* Change: add explain comment for this modify.

2008-02-11  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* cgi/kahua.cgi.in (cgi-error-proc): use current-error-page instead of default-error-page.

2008-02-10  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* src/kahua/protocol/http.scm (current-error-page): add.
	(kahua.protocol.http): use kahua.config.
	(kahua.protocol.http): export current-error-apge instead of default-error.page.

	* test/config.scm ("error-document-alist"): use ".page" instead of ".html".

	* test/test.conf (<kahua-config>): use ".page" for error document's extention, because it is text tree, it is not html.

	* test/config.scm ("error-document-alist"): add.
	("error-document 404"): add.
	("error-document 500"): add.
	("error-document 503"): add.

	* test/test.conf (<kahua-config>): add :error-document-ailst

	* src/kahua/config.scm.in (kahua.config): use util.list (assoc-ref)
	(kahua.config): export kahua-error-document-alist, kahua-error-document
	(<kahua-custom>): add slot 'error-document-alist
	(define-kahua-config-accessor): add error-document-alist
	(kahua-error-document): add.

2007-12-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: emacs/kahua.el.in
	  Display result evaluated by sending from kahua-mode buffer